feat: new testclasses added for Epics, History, Prioritized